# euro-python-2023

./: .dockerignore  Dockerfile  LICENSE  Makefile  README.md  config.fish  docker-compose.yaml
hpsort/: README.md  requirements.in  setup.cfg
hpsort/src/hpsort/: __main__.py  houses.py  sort.py  ui.py
hpsort/tests/: test_sort.py
nvim/: README.md  init.lua  lazy-lock.json
nvim/lua/user/: lazy.lua
nvim/lua/user/core/: autocommands.lua  keybinds.lua  options.lua
nvim/lua/user/plugins/: editor.lua  lsp.lua  navigation.lua  terminal.lua  testing.lua  ui.lua
