[metadata]
name = hpsort
version = 1.0.0
description = Sort students into a Hogwarts House with the Sorting Hat.
url = https://github.com/logan-connolly/euro-python-2023
author = Logan Connolly
author_email = logan.connolly@protonmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
package_dir=
    =src
packages = find:

[options.packages.find]
where=src
python_requires = >=3.10

[bdist_wheel]
universal = True
